[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/buttons/nivels/regresarbasic.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/nivels/regresarpress.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://scenes/PopUpBack.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/PopUpInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/PopUpReintentar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PopUpFinalizar.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/PopUpComparation.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
extra_spacing_space = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
extra_spacing_space = 5
font_data = ExtResource( 3 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 80.0
rect_min_size = Vector2( 1280, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="TopPanel"]
margin_right = 426.0
margin_bottom = 80.0
rect_min_size = Vector2( 426, 80 )

[node name="ToMenu" type="TextureButton" parent="TopPanel/Margin1"]
margin_left = 103.0
margin_top = 11.0
margin_right = 323.0
margin_bottom = 68.0
rect_min_size = Vector2( 220, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Margin2" type="MarginContainer" parent="TopPanel"]
margin_left = 430.0
margin_right = 852.0
margin_bottom = 80.0
rect_min_size = Vector2( 422, 80 )

[node name="Nivel" type="Label" parent="TopPanel/Margin2"]
margin_left = 211.0
margin_top = 20.0
margin_right = 211.0
margin_bottom = 59.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.85098, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.482353, 0.00784314, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1

[node name="Margin3" type="MarginContainer" parent="TopPanel"]
margin_left = 856.0
margin_right = 1278.0
margin_bottom = 80.0
rect_min_size = Vector2( 422, 80 )

[node name="Score" type="Label" parent="TopPanel/Margin3"]
margin_left = 211.0
margin_top = 20.0
margin_right = 211.0
margin_bottom = 59.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.85098, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.482353, 0.00784314, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1

[node name="PopUpBack" parent="." instance=ExtResource( 5 )]

[node name="PopUpInfo" parent="." instance=ExtResource( 6 )]

[node name="PopUpReintentar" parent="." instance=ExtResource( 7 )]

[node name="PopUpFinalizar" parent="." instance=ExtResource( 8 )]

[node name="PopUpComparation" parent="." instance=ExtResource( 9 )]
[connection signal="pressed" from="TopPanel/Margin1/ToMenu" to="." method="_on_ToMenu_pressed"]
